--- a/AutoFocusCCD/Properties/Settings.settings
+++ b/AutoFocusCCD/Properties/Settings.settings
@@ -5,5 +5,26 @@
     <Setting Name="ProductType" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="Vmin" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="Vmax" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">10</Value>
+    </Setting>
+    <Setting Name="Cmin" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="Cmax" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">10</Value>
+    </Setting>
+    <Setting Name="PATH_DATA_APP" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="PATH" Type="System.String" Scope="User">
+      <Value Profile="(Default)">./</Value>
+    </Setting>
+    <Setting Name="PATH_IMAGE_TSET" Type="System.String" Scope="User">
+      <Value Profile="(Default)">./predict</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
