--- a/AutoFocusCCD/packages.config
+++ b/AutoFocusCCD/packages.config
@@ -2,9 +2,21 @@
 <packages>
   <package id="Dapper" version="2.1.35" targetFramework="net48" />
   <package id="EntityFramework" version="6.5.1" targetFramework="net48" />
+  <package id="Microsoft.Bcl.HashCode" version="6.0.0" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="Ookii.Dialogs.WinForms" version="4.0.0" targetFramework="net48" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.119.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="9.0.0" targetFramework="net48" />
   <package id="System.Data.SQLite" version="1.0.119.0" targetFramework="net48" />
   <package id="System.Data.SQLite.Core" version="1.0.119.0" targetFramework="net48" />
   <package id="System.Data.SQLite.EF6" version="1.0.119.0" targetFramework="net48" />
   <package id="System.Data.SQLite.Linq" version="1.0.119.0" targetFramework="net48" />
+  <package id="System.Formats.Nrbf" version="9.0.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.6.0" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net48" />
+  <package id="System.Reflection.Metadata" version="9.0.0" targetFramework="net48" />
+  <package id="System.Resources.Extensions" version="9.0.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
