--- a/AutoFocusCCD/App.config
+++ b/AutoFocusCCD/App.config
@@ -45,7 +45,7 @@
         <value />
       </setting>
       <setting name="PATH" serializeAs="String">
-        <value>./</value>
+        <value />
       </setting>
       <setting name="PATH_IMAGE_TSET" serializeAs="String">
         <value>./predict</value>
