--- a/AutoFocusCCD/Properties/Settings.settings
+++ b/AutoFocusCCD/Properties/Settings.settings
@@ -21,7 +21,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="PATH" Type="System.String" Scope="User">
-      <Value Profile="(Default)">./</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="PATH_IMAGE_TSET" Type="System.String" Scope="User">
       <Value Profile="(Default)">./predict</Value>
