--- a/AutoFocusCCD/packages.config
+++ b/AutoFocusCCD/packages.config
@@ -4,6 +4,7 @@
   <package id="EntityFramework" version="6.5.1" targetFramework="net48" />
   <package id="Microsoft.Bcl.HashCode" version="6.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="NLog" version="5.3.4" targetFramework="net48" />
   <package id="Ookii.Dialogs.WinForms" version="4.0.0" targetFramework="net48" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.119.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
