--- a/AutoFocusCCD/AutoFocusCCD.csproj
+++ b/AutoFocusCCD/AutoFocusCCD.csproj
@@ -172,6 +172,12 @@
     <Compile Include="Forms\Setting\BoxImage.Designer.cs">
       <DependentUpon>BoxImage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Setting\FileManagement.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Setting\FileManagement.Designer.cs">
+      <DependentUpon>FileManagement.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Setting\Preferences.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -200,10 +206,14 @@
     <Compile Include="SQLite\SQLiteBase.cs" />
     <Compile Include="SQLite\SQliteDataAccess.cs" />
     <Compile Include="Utilities\Extensions.cs" />
+    <Compile Include="Utilities\FileManagementResponse.cs" />
     <Compile Include="Utilities\LineEndings.cs" />
     <Compile Include="Utilities\UsbCamera.cs" />
     <EmbeddedResource Include="Forms\Setting\BoxImage.resx">
       <DependentUpon>BoxImage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Setting\FileManagement.resx">
+      <DependentUpon>FileManagement.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Setting\Preferences.resx">
       <DependentUpon>Preferences.cs</DependentUpon>
