--- a/AutoFocusCCD/AutoFocusCCD.csproj
+++ b/AutoFocusCCD/AutoFocusCCD.csproj
@@ -85,6 +85,10 @@
   <PropertyGroup>
     <DelaySign>false</DelaySign>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>
+    </StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Dapper, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Dapper.2.1.35\lib\net461\Dapper.dll</HintPath>
@@ -210,6 +214,9 @@
     </Compile>
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Main.Process.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Main.Serial.cs">
       <SubType>Form</SubType>
