--- a/AutoFocusCCD/App.config
+++ b/AutoFocusCCD/App.config
@@ -50,6 +50,9 @@
       <setting name="PATH_IMAGE_TSET" serializeAs="String">
         <value>./predict</value>
       </setting>
+      <setting name="File_type" serializeAs="String">
+        <value>0</value>
+      </setting>
     </AutoFocusCCD.Properties.Settings>
   </userSettings>
   <runtime>
