--- a/AutoFocusCCD/AutoFocusCCD.csproj
+++ b/AutoFocusCCD/AutoFocusCCD.csproj
@@ -194,6 +194,12 @@
     <Compile Include="Forms\Setting\FileManagement.Designer.cs">
       <DependentUpon>FileManagement.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Setting\Historys.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Setting\Historys.Designer.cs">
+      <DependentUpon>Historys.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Setting\Preferences.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -230,6 +236,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLite\Boxes.cs" />
+    <Compile Include="SQLite\History.cs" />
     <Compile Include="SQLite\Product.cs" />
     <Compile Include="SQLite\SQLiteBase.cs" />
     <Compile Include="SQLite\SQliteDataAccess.cs" />
@@ -248,6 +255,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Setting\FileManagement.resx">
       <DependentUpon>FileManagement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Setting\Historys.resx">
+      <DependentUpon>Historys.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Setting\Preferences.resx">
       <DependentUpon>Preferences.cs</DependentUpon>
