--- a/AutoFocusCCD/AutoFocusCCD.csproj
+++ b/AutoFocusCCD/AutoFocusCCD.csproj
@@ -61,6 +61,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>2AC1E681EDD30CB222DB435F22E3F4CFF320E5FD</ManifestCertificateThumbprint>
