--- a/AutoFocusCCD/AutoFocusCCD.csproj
+++ b/AutoFocusCCD/AutoFocusCCD.csproj
@@ -229,6 +229,12 @@
     <Compile Include="Forms\Setting\Product.Designer.cs">
       <DependentUpon>Product.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Tools\CropImage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Tools\CropImage.Designer.cs">
+      <DependentUpon>CropImage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Tools\IOSimulate.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -281,6 +287,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Setting\Product.resx">
       <DependentUpon>Product.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Tools\CropImage.resx">
+      <DependentUpon>CropImage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Tools\IOSimulate.resx">
       <DependentUpon>IOSimulate.cs</DependentUpon>
