--- a/AutoFocusCCD/AutoFocusCCD.csproj
+++ b/AutoFocusCCD/AutoFocusCCD.csproj
@@ -268,6 +268,7 @@
     <Compile Include="Utilities\EnhancedPacketHandler.cs" />
     <Compile Include="Utilities\Extensions.cs" />
     <Compile Include="Utilities\FileManagementResponse.cs" />
+    <Compile Include="Utilities\HistoryUploadControl.cs" />
     <Compile Include="Utilities\LineEndings.cs" />
     <Compile Include="Utilities\UsbCamera.cs" />
     <EmbeddedResource Include="Forms\SelectModel.resx">
